--- a/book/templates/book/book_list.html
+++ b/book/templates/book/book_list.html
@@ -1,9 +1,11 @@
-<html>
-    <head>
-        <title>Ola's blog</title>
-    </head>
-    <body>
-        <p>Hi there!</p>
-        <p>It works!</p>
-    </body>
-</html>
+<div>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
+
+{% for leaf in leafs %}
+    <div>
+        <p>published: {{ leaf.published_date }}</p>
+        <h1><a href="">{{ leaf.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
