--- a/book/templates/book/book_list.html
+++ b/book/templates/book/book_list.html
@@ -6,7 +6,7 @@
             <div class="date">
                 {{ leaf.published_date }}
             </div>
-            <h1><a href="{% url 'post_detail' pk=leaf.pk %}">{{ leaf.title }}</a></h1>
+            <h1><a href="{% url 'book_detail' pk=leaf.pk %}">{{ leaf.title }}</a></h1>
             <p>{{ leaf.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
